--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
-*.xcframework filter=lfs diff=lfs merge=lfs -text
+libarkui_ios.xcframework/ios-arm64/libarkui_ios.framework/libarkui_ios filter=lfs diff=lfs merge=lfs -text
+libarkui_ios.xcframework/ios-arm64_x86_64-simulator/libarkui_ios.framework/libarkui_ios filter=lfs diff=lfs merge=lfs -text
